--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    h3#world {
+      color: red;
+    }
+  </style>
 </head>
 <body>
-  <h3>Hello, World</h3>
-  <script>
-    // 자바스크립트 영역.
-  </script>
+  <h3 id="world">Hello, World</h3>
+  <h3 id="friend">Hello, Friend</h3>
+  <button onclick="changeWord()">클릭</button>
+  <script src="js/index.js"></script>
+  <script src="js/condition.js"></script>
 </body>
 </html>
