--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,13 +11,27 @@
     }
   </style>
 </head>
+
 <body>
   <h3 id="world">Hello, World</h3>
   <h3 id="friend">Hello, Friend</h3>
-  점수:<input id="user_value" value="67"> 
+  점수:<input id="user_value" value="67">
   <button onclick="changeValue()">클릭</button>
   <!-- <button onclick="changeWord()">클릭</button> -->
-  <script src="js/index.js"></script>
-  <script src="js/condition.js"></script>
+  <div>
+    값1: <input type="number" id="user1" value="0">
+    <select onchange="calculate()" name="" id="oper">
+      <option value="+">+</option>
+      <option value="-">-</option>
+      <option value="*">*</option>
+      <option value="/">/</option>
+    </select>
+    값2: <input type="number" id="user2" value="0">
+    <span>=></span>
+    결과: <input type="number" id="result" value="0">
+
+    <script src="js/index.js"></script>
+    <script src="js/condition.js"></script>
+  </div>
 </body>
 </html>
