--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     결과: <input type="number" id="result" value="0">
 
     <script src="js/index.js"></script>
-    <script src="js/condition.js"></script>
+    <script src="js/todo.js"></script>
   </div>
 </body>
 </html>
