--- a/public/index copy.html
+++ b/public/index copy.html
@@ -9,18 +9,15 @@
 </head>
 <body>
   <h3>오늘은 반복문, 함수, 이벤트</h3>
-  <label for="n1">값1: </label>
-  <input type="number" id="n1" name="n1" value="0">
-  <select onchange="calculate()" id="oper">
+  값1: <input type="number" id="n1" value="0">
+  <select onchange="calculate()" id="opr">
     <option value="+">+</option>
     <option value="-">-</option>
     <option value="*">*</option>
     <option value="/">/</option>
   </select>
-  <label for="n2">값2: </label>
-  <input type="number" id="n2" name="n2" value="0">
-  <label for="result">결과값: </label>
-  <input type="number" id="result" name="result" value="0">
-  <script src="./js/2nd/todo.js"></script>
+  값2: <input type="number" id="n2" value="0">
+  결과값: <input type="number" id="result" value="0">
+  <script src="./js/2nd/todo2.js"></script>
 </body>
 </html>
