--- a/public/js/4th/index.html
+++ b/public/js/4th/index.html
@@ -55,6 +55,7 @@
 
   <input type="text" id="user_value">
   <button id="search_word">찾기</button>
+  <span id="timer"></span>
   <div class="outer"></div>
   <script src="./setInterval.js"></script>
 </body>
