--- a/public/js/5th/board.html
+++ b/public/js/5th/board.html
@@ -167,8 +167,8 @@
     </form>
   </div>
   <div class="data-container" id="data-container">
-    <!-- <div class="comments">
-    </div> -->
+    <div class="comments">
+    </div>
   </div>
   </div>
   </div>
