--- a/public/js/7th/board.html
+++ b/public/js/7th/board.html
@@ -97,11 +97,11 @@
     <!-- <div>
       <span></span>
     </div> -->
-    <!-- <div class="comments">
-      <span></span>
-    </div> -->
+    <div class="comments">
+      <!-- <span></span> -->
+    </div>
   </div>
-  <script src="./db.js"></script>
+  <script src="./boardPratice.js"></script>
 </body>
 
 </html>
