--- a/public/js/9th/index.html
+++ b/public/js/9th/index.html
@@ -10,9 +10,272 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous">
   </script>
+  <style>
+    :root {
+      --bg: #f5f7fb;
+      --card: #ffffff;
+      --accent: #4f46e5;
+      --muted: #94a3b8;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+      background: linear-gradient(180deg, var(--bg), #eef2ff 60%);
+      margin: 0;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      /* ✅ 세로 배치 */
+      align-items: center;
+      /* 가운데 정렬 */
+      justify-content: flex-start;
+      /* 위에서부터 차례대로 */
+      padding: 32px;
+      gap: 20px;
+      /* 폼/제목/테이블 사이 간격 */
+    }
+
+    .card {
+      background: var(--card);
+      width: 600px;
+      border-radius: 12px;
+      box-shadow: 0 6px 30px rgba(79, 70, 229, 0.08);
+      padding: 28px;
+    }
+
+    h1 {
+      margin: 0 0 20px 0;
+      font-size: 22px;
+      font-weight: 700;
+      color: #1e293b;
+      text-align: center;
+    }
+
+    form {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 16px;
+    }
+
+    .field {
+      display: flex;
+      flex-direction: column;
+    }
+
+    label {
+      font-size: 14px;
+      font-weight: 500;
+      color: #334155;
+      margin-bottom: 6px;
+    }
+
+    input[type=text],
+    input[type=number],
+    input[type=date] {
+      padding: 10px 12px;
+      border-radius: 8px;
+      border: 1px solid #e6eef8;
+      font-size: 14px;
+      outline: none;
+      transition: box-shadow .15s, border-color .15s;
+    }
+
+    input:focus {
+      box-shadow: 0 0 0 4px rgba(79, 70, 229, 0.06);
+      border-color: var(--accent);
+    }
+
+    .full {
+      grid-column: 1 / -1;
+    }
+
+    .actions {
+      display: flex;
+      gap: 10px;
+      justify-content: flex-end;
+    }
+
+    button {
+      padding: 10px 16px;
+      border-radius: 8px;
+      border: none;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background 0.2s;
+    }
+
+    button.secondary {
+      background: #f1f5f9;
+      color: #0f172a;
+    }
+
+    button.secondary:hover {
+      background: #e2e8f0;
+    }
+
+    button[type=submit] {
+      background: var(--accent);
+      color: white;
+    }
+
+    button[type=submit]:hover {
+      background: #4338ca;
+    }
+
+    @media (max-width: 640px) {
+      .card {
+        width: 100%;
+        padding: 18px;
+      }
+
+      form {
+        grid-template-columns: 1fr;
+      }
+    }
+
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #f7f9fc;
+      margin: 0;
+      padding: 20px;
+    }
+
+    .search-container {
+      max-width: 600px;
+      margin: 0 auto;
+      background: #fff;
+      padding: 20px 25px;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    .search-container h2 {
+      margin-bottom: 20px;
+      text-align: center;
+      color: #333;
+    }
+
+    .form-group {
+      margin-bottom: 15px;
+    }
+
+    .form-group label {
+      display: block;
+      font-weight: 600;
+      margin-bottom: 6px;
+      color: #555;
+    }
+
+    .form-group input,
+    .form-group select {
+      width: 100%;
+      padding: 10px 12px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 14px;
+    }
+
+    .btn-group {
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    .btn {
+      padding: 10px 20px;
+      border: none;
+      border-radius: 6px;
+      font-size: 14px;
+      cursor: pointer;
+      margin: 0 5px;
+      transition: 0.2s;
+    }
+
+    .btn-search {
+      background: #4a90e2;
+      color: #fff;
+    }
+
+    .btn-search:hover {
+      background: #357ab8;
+    }
+
+    .btn-reset {
+      background: #e0e0e0;
+      color: #333;
+    }
+
+    .btn-reset:hover {
+      background: #c7c7c7;
+    }
+  </style>
 </head>
 
 <body>
+  <!-- 사번, 사원명, 직무, 입사일자, 부서번호 -->
+  <main class="card">
+    <h1>사원 등록</h1>
+    <form id="empForm" action="addEmp.do" method="post">
+      <div class="field">
+        <label for="empNo">사번</label>
+        <input id="empNo" name="empNo" type="text" />
+      </div>
+
+      <div class="field">
+        <label for="empName">사원명</label>
+        <input id="empName" name="empName" type="text" />
+      </div>
+
+      <div class="field">
+        <label for="jobTitle">직무</label>
+        <input id="jobTitle" name="jobTitle" type="text" />
+      </div>
+
+      <div class="field">
+        <label for="hireDate">입사일자</label>
+        <input id="hireDate" name="hireDate" type="date" />
+      </div>
+
+      <div class="field">
+        <label for="deptNo">부서번호</label>
+        <input id="deptNo" name="deptNo" type="number" />
+      </div>
+
+      <div class="field full actions">
+        <button type="reset" class="secondary">초기화</button>
+        <button type="submit">저장</button>
+      </div>
+    </form>
+  </main>
+  <div class="search-container">
+    <h2>검색 조건</h2>
+    <form action="../../index.html" id="searchForm">
+      <div class="form-group">
+        <label for="searchName">사원명</label>
+        <input type="text" id="searchName" name="searchName">
+      </div>
+
+      <div class="form-group">
+        <label for="searchJob">직무</label>
+        <input type="text" id="searchJob" name="searchJob">
+      </div>
+
+      <div class="form-group">
+        <label for="searchDept">부서번호</label>
+        <input type="number" id="searchDept" name="searchDept">
+      </div>
+
+      <div class="btn-group">
+        <!-- <button type="submit" class="btn btn-search">검색</button>   -->
+        <!-- form submit 이벤트-->
+        <button type="button" class="btn btn-search">검색</button>
+        <button type="reset" class="btn btn-reset">초기화</button>
+      </div>
+    </form>
+  </div>
   <h3>Emp 데이터 목록</h3>
   <table class="table">
     <thead>
@@ -20,61 +283,15 @@
         <th>사번</th>
         <th>이름</th>
         <th>직무</th>
+        <!-- <th>입사일자</th> -->
         <th>급여</th>
+        <th>부서</th>
         <th>삭제</th>
       </tr>
     </thead>
     <tbody id="list"></tbody>
   </table>
-  <script>
-    // http://localhost:3000/emp => json데이터.
-    fetch("http://localhost:3000/emp")
-      .then((response) => response.json())
-      .then((result) => {
-        console.log(result);
-        result.forEach(item => {
-          let tr = makeRow(item);
-          document.querySelector('#list').appendChild(tr);
-        });
-      })
-      .catch((err) => console.log(err));
-
-    function makeRow(employee) {
-      let fields = ['EMPNO', "ENAME", "JOB", "SAL"];
-      let tr = document.createElement('tr');
-      tr.setAttribute('data-eno', employee.EMPNO);
-      fields.forEach(field => {
-        let td = document.createElement('td');
-        td.innerHTML = employee[field];
-        tr.appendChild(td);
-      });
-      // 삭제버튼.
-      let btn = document.createElement('button');
-      btn.innerHTML = '삭제';
-      btn.addEventListener("click", deleteFunc);
-      let td = document.createElement('td');
-      td.appendChild(btn);
-      tr.appendChild(td);
-      return tr;
-    } // end of makeRow.
-
-    function deleteFunc(e) {
-      let thisTr = this.parentElement.parentElement;
-      let eno = this.parentElement.parentElement.dataset.eno;
-      console.log(this.parentElement.parentElement.dataset); // data-eno
-      fetch('http://localhost:3000/emp/' + eno)
-        .then((response) => response.json())
-        .then((result) => {
-          if (result.rowsAffected) {
-            alert('성공');
-            thisTr.remove();
-          } else {
-            alert('실패');
-          }
-        })
-        .catch((err) => console.log(err));
-    }
-  </script>
+  <script src="emp.js"></script>
 </body>
 
 </html>
