--- a/public/js/myproject/gym.html
+++ b/public/js/myproject/gym.html
@@ -8,22 +8,22 @@
 </head>
 
 <body>
-  <h3>회원 목록</h3>
-  <table class="table">
-    <thead>
-      <tr>
-        <th>회원번호</th>
-        <th>회원아이디</th>
-        <th>비밀번호</th>
-        <th>이름</th>
-        <th>전화번호</th>
-        <th>수업번호</th>
-        <th>락커번호</th>
-      </tr>
-    </thead>
-    <tbody id="list"></tbody>
-  </table>
-  <script src="member.js"></script>
+  <h1>헬스장 회원관리 사이트</h1>
+  <a href="./signup.html">
+    <h3>회원가입</h3>
+  </a>
+  <a href="./login.html">
+    <h3>로그인</h3>
+  </a>
+  <a href="./myPage.html">
+    <h3>마이페이지</h3>
+  </a>
+  <a href="./class.html">
+    <h3>수업목록</h3>
+  </a>
+  <a href="./locker.html">
+    <h3>락커목록</h3>
+  </a>
 </body>
 
 </html>
