--- a/public/js/myproject/signup.html
+++ b/public/js/myproject/signup.html
@@ -5,10 +5,247 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>signup.html</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+
+    .login-container,
+    .signup-container,
+    .findId-container,
+    .findPW-container {
+      background-color: #fff;
+      padding: 40px;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      width: 300px;
+      text-align: center;
+    }
+
+    .login-container h2,
+    .signup-container h2,
+    .findId-container h2,
+    .findPW-container h2 {
+      margin-bottom: 20px;
+      color: #333;
+    }
+
+    .input-group {
+      margin-bottom: 15px;
+      text-align: left;
+    }
+
+    .input-group label {
+      display: block;
+      margin-bottom: 5px;
+      color: #555;
+      font-weight: bold;
+    }
+
+    .input-group input {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      box-sizing: border-box;
+      /* Ensures padding doesn't affect the width */
+    }
+
+    .btn-group {
+      display: flex;
+      justify-content: space-between;
+      /* 버튼 사이 간격 자동 배분 */
+      gap: 10px;
+      /* 버튼 사이 간격 */
+      margin-top: 20px;
+    }
+
+    .btn-group button {
+      flex: 1;
+      /* 버튼이 균등하게 넓이 차지 */
+      padding: 12px 0;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 16px;
+      font-weight: bold;
+      transition: background-color 0.3s ease, transform 0.2s ease;
+    }
+
+    .btn-group button:hover {
+      transform: translateY(-2px);
+      /* 살짝 들리는 느낌 */
+    }
+
+    /* 찾기버튼 */
+    .findBtn-group {
+      display: flex;
+      justify-content: flex-end;
+      /* 오른쪽 정렬 */
+      align-items: center;
+      /* 세로 중앙 정렬 */
+      gap: 5px;
+      /* 버튼과 구분자 사이 간격 */
+      margin-bottom: 15px;
+      /* 위아래 여백 */
+    }
+
+    .findBtn-group .divider {
+      display: inline-flex;
+      /* 버튼과 같은 라인에 정렬 */
+      align-items: center;
+      /* 세로 중앙 맞춤 */
+      height: 100%;
+      /* 버튼 높이 맞춤 */
+      color: #555;
+      /* 구분자 색상 */
+      user-select: none;
+      /* 텍스트 선택 방지 */
+    }
+
+    .findBtn-group button {
+      background: none;
+      /* 배경 없애기 */
+      border: none;
+      /* 테두리 없애기 */
+      color: #007bff;
+      /* 글자색 */
+      cursor: pointer;
+      font-size: 14px;
+      padding: 0;
+      /* 기본 패딩 제거 */
+    }
+
+    .findBtn-group button:hover {
+      text-decoration: underline;
+      /* 마우스 올리면 밑줄 */
+    }
+
+    .findBtn-group .divider {
+      margin: 0 5px;
+      /* 글자 사이 간격 */
+      color: #555;
+      /* 구분자 색상 */
+      user-select: none;
+      /* 선택 안 되게 */
+    }
+
+    /* 개별 버튼 색상 */
+    .login-btn,
+    .findId-btn,
+    .findPW-btn {
+      background-color: #007bff;
+    }
+
+    .login-btn:hover {
+      background-color: #0056b3;
+    }
+
+    .signup-btn {
+      background-color: #28a745;
+    }
+
+    .signup-btn:hover {
+      background-color: #1e7e34;
+    }
+  </style>
 </head>
 
 <body>
-  <h1>회원가입</h1>
+  <!-- 회원가입 -->
+  <div class="signup-container">
+    <form class="signup-form" action="#" style="position: relative;">
+      <!-- 뒤로가기 아이콘 -->
+      <span id="back-to-login" style="position: absolute; top: 10px; left: 10px; cursor: pointer;">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-left"
+          viewBox="0 0 16 16">
+          <path fill-rule="evenodd"
+            d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8" />
+        </svg>
+      </span>
+      <h2>회원가입</h2>
+      <div class="input-group">
+        <label for="signup-id">아이디</label>
+        <input type="text" id="signup-id" name="signup-id" required />
+      </div>
+      <div class="input-group">
+        <label for="signup-pw">비밀번호</label>
+        <input type="password" id="signup-pw" name="signup-pw" required />
+      </div>
+      <div class="input-group">
+        <label for="member-name">이름</label>
+        <input type="text" id="member-name" name="member-name" required />
+      </div>
+      <div class="input-group">
+        <label for="birth">생년월일</label>
+        <input type="date" id="birth" name="birth" required />
+      </div>
+      <div class="input-group">
+        <label for="tel">휴대폰번호</label>
+        <input type="text" id="tel" name="tel" placeholder="010-1111-1111" required />
+      </div>
+      <div class="btn-group">
+        <button type="submit" class="signup-btn">가입</button>
+      </div>
+    </form>
+  </div>
+  <script>
+    // 회원가입 -> 메인페이지 뒤로가기
+    document.querySelector('div.signup-container #back-to-login')
+      .addEventListener('click', function () {
+        window.location.href = "mainPage.html";
+      });
+
+    // 회원가입
+    document.querySelector('form.signup-form')
+      .addEventListener('submit', function (e) {
+        e.preventDefault();
+
+        let id = document.querySelector("#signup-id").value;
+        let pw = document.querySelector("#signup-pw").value;
+        let name = document.querySelector("#member-name").value;
+        let birth = document.querySelector("#birth").value;
+        let tel = document.querySelector("#tel").value;
+        fetch("http://localhost:3000/gym/signup", {
+            method: "post",
+            headers: {
+              "Content-Type": "application/json;charset=utf-8",
+            },
+            body: JSON.stringify({
+              id,
+              pw,
+              name,
+              birth,
+              tel
+            }),
+          })
+          .then((response) => response.json())
+          .then((result) => {
+            console.log(result);
+
+            // 서버 응답(result)이 성공이면 메인 페이지로 이동
+            if (result.success) { // 서버에서 { success: true } 보내주는 경우
+              alert("가입 완료");
+              window.location.href = "mainPage.html"; // 메인 페이지로 이동
+            } else {
+              alert("가입 실패");
+            }
+
+            // 입력값 초기화.
+            document.querySelectorAll('div.signup-container input').forEach(input => {
+              input.value = '';
+            });
+          })
+          .catch((err) => console.log(err));
+      });
+  </script>
 </body>
 
 </html>
