--- a/public/js/myproject/mainPage.html
+++ b/public/js/myproject/mainPage.html
@@ -308,9 +308,9 @@
           <button type="button" class="search-btn">검색</button>
         </div>
         <select class="order">
-          <option selected>최신등록순</option>
-          <option>마감빠른순</option>
-          <option>시작일 순</option>
+          <option value="latest" selected>최신등록순</option>
+          <option value="deadline">마감빠른순</option>
+          <option value="startdate">시작일 순</option>
         </select>
       </div>
 
