--- a/public/js/myproject/myClasses.html
+++ b/public/js/myproject/myClasses.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>마이페이지</title>
+  <title>수업 신청 내역</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -174,7 +174,7 @@
     </main>
   </div>
 
-  <script src="myPage.js"></script>
+  <script src="myClasses.js"></script>
 </body>
 
 </html>
