--- a/public/js/myproject/classDetail.html
+++ b/public/js/myproject/classDetail.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>마이페이지</title>
+  <title>수업 상세보기</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
-      background-color: #f2f4f7;
+      background-color: #f8f9fa;
       color: #343a40;
     }
 
@@ -72,7 +72,7 @@
     .container {
       display: flex;
       justify-content: center;
-      align-items: flex-start;
+      align-items: center;
       padding: 60px 20px;
     }
 
@@ -81,39 +81,48 @@
       background-color: #fff;
       border-radius: 16px;
       padding: 40px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
       max-width: 700px;
       width: 100%;
     }
 
-    .title {
-      font-size: 28px;
+    .class-title {
+      font-size: 26px;
       font-weight: 700;
       color: #0d6efd;
-      margin-bottom: 30px;
+      margin-bottom: 25px;
       text-align: center;
     }
 
-    .my-info {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
+    .class-info {
+      margin-bottom: 35px;
+      line-height: 1.9;
+      font-size: 16px;
     }
 
-    .my-info div {
+    .class-info>div {
       display: flex;
       justify-content: space-between;
-      padding: 12px 15px;
-      border-radius: 8px;
-      background-color: #f8f9fa;
-      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+      border-bottom: 1px solid #e9ecef;
+      padding: 8px 0;
     }
 
     .info-label {
       font-weight: 600;
       color: #495057;
+      width: 120px;
     }
 
+    #classDescription {
+      margin-top: 15px;
+      line-height: 1.7;
+      color: #495057;
+      background-color: #f8f9fa;
+      padding: 15px;
+      border-radius: 10px;
+    }
+
+    /* 버튼 그룹 */
     .btn-group {
       display: flex;
       justify-content: center;
@@ -131,12 +140,20 @@
       transition: all 0.3s ease;
     }
 
-    .class-btn {
-      background-color: #40a0f3;
+    .apply-btn {
+      background-color: #198754;
     }
 
-    .class-btn:hover {
-      background-color: #1c95ff;
+    .apply-btn:hover {
+      background-color: #157347;
+    }
+
+    .cancel-btn {
+      background-color: #dc3545;
+    }
+
+    .cancel-btn:hover {
+      background-color: #c82333;
     }
 
     .back-btn {
@@ -147,14 +164,19 @@
       background-color: #5a6268;
     }
 
+    /* 모바일 대응 */
     @media screen and (max-width: 600px) {
       .main-content {
         padding: 25px;
       }
 
-      .my-info div {
+      .class-info>div {
         flex-direction: column;
         align-items: flex-start;
+      }
+
+      .info-label {
+        margin-bottom: 4px;
       }
     }
   </style>
@@ -162,19 +184,20 @@
 
 <body>
   <header>
-    <h1>마이페이지</h1>
+    <h1>수업 상세보기</h1>
     <div class="top-right">
       <button class="login-btn" onclick="goLogin()">로그인</button>
       <button class="signup-btn" onclick="goSignup()">회원가입</button>
     </div>
   </header>
+
   <div class="container">
     <main class="main-content">
 
     </main>
   </div>
 
-  <script src="myPage.js"></script>
+  <script src="classDetail.js"></script>
 </body>
 
 </html>
