--- a/public/js/myproject/mainPage.html
+++ b/public/js/myproject/mainPage.html
@@ -283,7 +283,7 @@
 
 <body>
   <header>
-    <h1>메인페이지</h1>
+    <h1>헬스장 수업 관리 페이지</h1>
     <div class="top-right">
       <button class="login-btn" onclick="goLogin()">로그인</button>
       <button class="signup-btn" onclick="goSignup()">회원가입</button>
