--- a/public/js/myproject/myClasses.html
+++ b/public/js/myproject/myClasses.html
@@ -9,8 +9,8 @@
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
-      background-color: #f2f4f7;
-      color: #343a40;
+      background-color: #f8f9fa;
+      color: #212529;
     }
 
     /* 상단바 */
@@ -21,7 +21,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     }
 
     header h1 {
@@ -65,96 +65,115 @@
     }
 
     .logout-btn:hover {
-      background-color: #c82333;
+      background-color: #bb2d3b;
     }
 
-    /* 가운데 정렬 레이아웃 */
+    /* 메인 레이아웃 */
     .container {
       display: flex;
       justify-content: center;
-      align-items: flex-start;
       padding: 60px 20px;
     }
 
-    /* 상세 내용 카드 */
     .main-content {
       background-color: #fff;
       border-radius: 16px;
       padding: 40px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
-      max-width: 700px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
       width: 100%;
+      max-width: 900px;
     }
 
     .title {
       font-size: 28px;
       font-weight: 700;
       color: #0d6efd;
-      margin-bottom: 30px;
       text-align: center;
+      margin-bottom: 30px;
     }
 
-    .my-info {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
+    /* 테이블 */
+    .table {
+      width: 100%;
+      border-collapse: collapse;
+      text-align: center;
+      background-color: white;
+      border-radius: 10px;
+      overflow: hidden;
     }
 
-    .my-info div {
-      display: flex;
-      justify-content: space-between;
-      padding: 12px 15px;
-      border-radius: 8px;
-      background-color: #f8f9fa;
-      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+    .table th,
+    .table td {
+      padding: 14px 12px;
+      border-bottom: 1px solid #dee2e6;
     }
 
-    .info-label {
+    .table thead {
+      background-color: #0d6efd;
+      color: white;
+    }
+
+    .table tbody tr:hover {
+      background-color: #f1f3f5;
+      transition: background-color 0.2s ease;
+    }
+
+    .table th {
       font-weight: 600;
-      color: #495057;
+      font-size: 16px;
     }
 
-    .btn-group {
+    .table td {
+      font-size: 15px;
+    }
+
+    /* 버튼 */
+    .btn-container {
       display: flex;
       justify-content: center;
-      gap: 12px;
-      margin-top: 30px;
+      /* 가운데 정렬 */
+      align-items: center;
+      margin-top: 40px;
     }
 
-    .btn-group button {
-      padding: 10px 20px;
-      border: none;
-      border-radius: 8px;
-      font-weight: 600;
-      cursor: pointer;
-      color: white;
-      transition: all 0.3s ease;
-    }
-
-    .class-btn {
-      background-color: #40a0f3;
-    }
-
-    .class-btn:hover {
-      background-color: #1c95ff;
+    /* 버튼 중앙 정렬 */
+    .btn-wrapper {
+      width: 100%;
+      /* 부모 너비 전체 */
+      display: flex;
+      /* 플렉스 사용 */
+      justify-content: center;
+      /* 가로 가운데 정렬 */
+      margin-top: 20px;
+      /* 테이블과 간격 */
     }
 
     .back-btn {
       background-color: #6c757d;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      padding: 10px 24px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.3s ease;
     }
 
     .back-btn:hover {
       background-color: #5a6268;
     }
 
-    @media screen and (max-width: 600px) {
-      .main-content {
-        padding: 25px;
+    /* 반응형 */
+    @media screen and (max-width: 768px) {
+
+      .table th,
+      .table td {
+        font-size: 13px;
+        padding: 10px 8px;
       }
 
-      .my-info div {
-        flex-direction: column;
-        align-items: flex-start;
+      .main-content {
+        padding: 25px;
       }
     }
   </style>
@@ -170,7 +189,22 @@
   </header>
   <div class="container">
     <main class="main-content">
-
+      <table class="table">
+        <thead>
+          <tr>
+            <th>카테고리</th>
+            <th>수업명</th>
+            <th>등록기간</th>
+            <th>수업기간</th>
+            <th>신청인원/정원</th>
+          </tr>
+        </thead>
+        <tbody id="myClasses">
+        </tbody>
+      </table>
+      <div class="btn-wrapper">
+        <button class="back-btn" onclick="goMyPage()">이전으로</button>
+      </div>
     </main>
   </div>
 
