--- a/public/js/myproject/myPage.html
+++ b/public/js/myproject/myPage.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>마이페이지</title>
   <style>
+    /* 전체 기본 */
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
@@ -68,7 +69,7 @@
       background-color: #c82333;
     }
 
-    /* 가운데 정렬 레이아웃 */
+    /* 컨테이너 */
     .container {
       display: flex;
       justify-content: center;
@@ -76,7 +77,7 @@
       padding: 60px 20px;
     }
 
-    /* 상세 내용 카드 */
+    /* 메인 카드 */
     .main-content {
       background-color: #fff;
       border-radius: 16px;
@@ -84,6 +85,9 @@
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
       max-width: 700px;
       width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
     }
 
     .title {
@@ -94,13 +98,16 @@
       text-align: center;
     }
 
-    .my-info {
+    /* 정보 박스 */
+    .info-container,
+    .my-update {
       display: flex;
       flex-direction: column;
-      gap: 15px;
+      gap: 12px;
     }
 
-    .my-info div {
+    .info-container div,
+    .my-update div {
       display: flex;
       justify-content: space-between;
       padding: 12px 15px;
@@ -109,19 +116,31 @@
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
     }
 
-    .info-label {
+    label,
+    span {
       font-weight: 600;
       color: #495057;
     }
 
-    .btn-group {
+    input {
+      padding: 6px 10px;
+      border-radius: 6px;
+      border: 1px solid #ced4da;
+      width: 60%;
+    }
+
+    /* 버튼 그룹 */
+    .btn-group,
+    .my-update-buttons {
       display: flex;
       justify-content: center;
       gap: 12px;
-      margin-top: 30px;
+      margin-top: 20px;
+      flex-wrap: wrap;
     }
 
-    .btn-group button {
+    .btn-group button,
+    .my-update-buttons button {
       padding: 10px 20px;
       border: none;
       border-radius: 8px;
@@ -139,6 +158,14 @@
       background-color: #1c95ff;
     }
 
+    .myUpdate-btn {
+      background-color: #24b572;
+    }
+
+    .myUpdate-btn:hover {
+      background-color: #20a265;
+    }
+
     .back-btn {
       background-color: #6c757d;
     }
@@ -147,14 +174,28 @@
       background-color: #5a6268;
     }
 
+    .save-btn {
+      background-color: #0d6efd;
+    }
+
+    .save-btn:hover {
+      background-color: #0b5ed7;
+    }
+
     @media screen and (max-width: 600px) {
       .main-content {
         padding: 25px;
       }
 
-      .my-info div {
+      .info-container div,
+      .my-update div {
         flex-direction: column;
         align-items: flex-start;
+      }
+
+      input {
+        width: 100%;
+        margin-top: 4px;
       }
     }
   </style>
